--- a/ecclesia/oracion/01Statio.html
+++ b/ecclesia/oracion/01Statio.html
@@ -55,21 +55,17 @@
       <ol>
         <li>
           <details class="select">
-            <summary>Apertura a la Novedad</summary>
+            <summary>La Gracia de la Novedad</summary>
             <p>
-              Dios nos invita a ser nuevos, por un camino que solo el sabe, por
-              eso aceptar el pan nuestro como la novedad nuestra de cada día<br /><br />
+              Dios nos invita a ser nuevos, por un camino que solo el sabe <b><br /><br /> Isaías 43,18-19 «No recuerden las cosas pasadas; no vivan en el pasado. ¡Voy a hacer algo nuevo! Ya está sucediendo, ¿no se dan cuenta? Estoy abriendo camino en el desierto y ríos en lugares desolados»
+<br><br>2 Corintios 5,17: «Por lo tanto, si alguno está en Cristo, es una nueva creación. Lo viejo ha pasado, ha llegado lo nuevo»
+ <br><br></b>
             </p>
             <ol>
-              <li>En la oración entregar el día al Señor</li>
-              <li>
-                Aceptar toda realidad como primer paso para ser mejor y mejorar
-                la realidad
-              </li>
-              <li>Dios se hace presente en la novedad</li>
-              <li>
-                Examinar como reacciono a la novedad, la agradable y la otra
-              </li>
+              <li>Aceptar toda realidad como primer paso para ser mejor y mejorar la realidad </li>
+              <li>Dios se hace presente en la Gracia de la novedad</li>
+              <li> Examinar como reacciono a la novedad</li>
+              <li>El que no crece en la fe permanentemente ha empezado a retroceder. Es la importancia de la disposición al cambio</li>
             </ol>
             <p><br /><br /></p>
           </details>
@@ -77,96 +73,57 @@
         <!-- ****************************** -->
 <li><details class="select">
         <summary>El Llamado Universal </summary>
-        <p>Todos estamos llamados a ser uno con Cristo<br><br>
+        <p><b>Todos estamos llamados a ser uno con Cristo Jn 17,21</b><br><br>
      <ol>
-      <li>Dios nos a creado capaces de él</li>
-      <li>Siempre nos está atrayendo de muchas maneras</li>
-      <li>Dios nos llama con lo que nos gusta.</li>
-        <li>Pero, Si nos quedamos solamente en lo que nos gusta no habremos avanzado nada.</li>
-        <li>El que no crecen en la fe ha empezado a retroceder.</li>
-        <li>Cada persona hace el bien desde lo que le gusta.</li>
-        <li>Pueden ser ayunos, oración, limosna. Siempre y cuando le den un gusto.</li>
-        <li>Cada persona pinta la devoción desde su gusto. 'Aurelio'.</li>
-        <li>No todos están llamados a vivir la devoción de la misma manera.</li>
-        <li>No es lo mismo ser devoto siendo obispo, artesano, soldado, campesino o casado.</li>
-        <li>Cada uno debe vivir su fe de manera coherente con su vocación, sin abandonar sus responsabilidades ni aislarse del mundo.</li>
-        <li>Ser devoto no es hacer muchas oraciones, sino vivir con amor, en nuestro trabajo, familia y deberes.</li>
+        <h3>Su Acción</h3>
+      <li>Dios nos a creado capaces de Él</li>
       <li>Nos recibe tal como somos, como un médico a su paciente o un maestro a su alumno</li>
-      <h3>Su Acción</h3>
-      <li>Dios siempre se da totalmente, el pecado obstruye mi vista, pero jamás la certeza de su Presencia</li>
-      <li>Dios, jamás abandona a una persona, siempre está guiándola e inspirándola al bien.</li>
-        <li>Exige una respuesta radical</li>
-        <li>Una vida de permanente conversión (Fe, Esperanza y Amor) </li>
+      <li>El Señor, jamás abandona a una persona, siempre está guiándola e inspirándola al bien.</li>
+      <li>El Señor está actuando en todas y cada una de las personas</li>
+      <li>Él siempre se da totalmente, el pecado obstruye mi vista, pero jamás la certeza de su Presencia</li>
+            <li>Él se manifiesta a todo el que lo busca.</li>
+            <li></li>
+       </ol>
+      
+      <h3>Respuesta </h3>
+      <ol>
+        <li>No todos están llamados a vivir la fe de la misma manera.
+    No es lo mismo ser obispo, artesano, soldado, campesino, soltero o casado. La meta es la misma pero el camino tiene variaciones</li>
+        <li>Cada uno debe vivir su fe de manera coherente con su vocación, sin abandonar sus responsabilidades ni aislarse del mundo.</li>
+        <li>Ser persona de fe no es hacer muchas oraciones, sino vivir con amor, en nuestro trabajo, familia y deberes. Incluso cosas sencillas como cocinar, trabajar, cuidar a la familia, etc.</li>
+        <li>Una vida de permanente conversión (Creciendo en la Fe, Esperanza y Amor) </li>
         <li>Implica una renuncia a todo lo que nos aleja del Señor</li>
-        <li>El objetivo es Jn 17,21</li>
-        <li>El Señor está actuando en todas y cada una de las personas</li>
-        <li>Él se manifiesta a A todo el que lo busca.</li>
-        <li>Ser católico ayuda con la disposición el conocimiento y la apertura a la Gracia.</li>
-        <li>La elección tiene como fin que la luz de Cristo brille para todos y en cada una de las personas.</li>
-      <li></li>
-      <li></li>
-      <li></li>
-          
-  
-      <h3>NOTAS</h3>
-      <p>Devoción no es solo rezar o hacer prácticas religiosas externas (como rosarios, novenas o ir a misa). Tampoco es un simple “sentimiento” piadoso. <br>	<br>
-        La devoción, según San Francisco, es:	<br>
-        “Un verdadero amor a Dios vivido con prontitud, alegría y constancia en el cumplimiento de su voluntad.”	<br>
-        O sea, es una vida cristiana más profunda y comprometida, donde:	<br>
-        Se busca amar a Dios con todo el corazón,	<br>
-        Se desea hacer su voluntad con generosidad,	<br>
-        Y se vive con un espíritu de caridad activa (amor al prójimo, bondad, humildad). <br>	<br>
-        No es una carga, sino un fuego interior	<br>
-        No es "hacer más cosas religiosas", sino hacer todo con amor y por amor a Dios. Incluso cosas sencillas como cocinar, trabajar, cuidar a la familia, etc. <br>	<br>
-        La devoción no está en lo que se hace sino en lo que nos motiva a hacer. El amor a Dios, en la acción de su Voluntad y su caridad. 
-          <li>Los escalones en el camino al Señor son los diferentes grados de caridad.</li>
-        <li>Quien se a decidido a seguir al Señor debe prepararse para la tentación</li>
-        <li></li>
-      <H3>NOTAS</H3>
-      <p>    
-        <p>Afirma que la devoción no arruina nada bueno, sino que mejora todas las cosas:	<br>
-          Afirma que la devoción no arruina nada bueno, sino que mejora todas las cosas:	<br>
+        <li>  La devoción no está en lo que se hace sino en lo que nos motiva a hacer.</li>
+        <li>Ser católico es una Gracia que ayuda con la disposición, el conocimiento y la actitud</li>
+        <li>No es una carga, sino un fuego interior</li>
+        <li>La devoción es necesaria a todas las personas</li>
+        <li>La devoción todo lo perfecciona.</li>
+        <li>La perfección en cada estado y en cada persona.</li>
+        <li>Siempre de acuerdo a sus características únicas y personales</li>
+        <li>La vocación debe acomodarse a la devoción.</li>
+      <p>
+         <i> Afirma Francisco de Sales que la devoción no arruina nada, sino que mejora todas las cosas:	<br><br>
           Hace al amor más puro,	<br>
           El trabajo más justo,	<br>
           El matrimonio más santo,	<br>
-          Y la vida en general, más plena y alegre.	<br> <br>
-          Este capítulo es una defensa preciosa de la vida devota en el mundo real. Nos anima a ver que:	<br>
-          La devoción no es una huida del mundo, sino una forma de santificarlo.	<br>
-          No está reñida con la alegría ni con el buen humor.	<br>
-          Quien vive con Dios en el corazón, puede ser más feliz, más fuerte y más humano.	<br>
-          San Francisco rompe con la imagen del cristiano triste o agobiado. ¡Al contrario! Para él, la verdadera devoción alegra el alma, embellece la vida y fortalece el corazón.	<br>	
+          Y la vida en general, más plena y alegre.	</i><br> <br>
+       	<br>
       </ol>
         </p>
       </details></li>
       <!-- ****************************** -->
         <li><details class="select">
-          <summary>Communicare</summary>
+          <summary>Deus communicat</summary>
           <ol>
             <li>El Señor se Comunica con cada persona a cada persona de manera que pueda entenderlo. Una zarza ardiendo, sueños, una estrella, una parábola, un milagro, etc. </li>
             <li>Dios nos habla a través de lo que amamos. Porque dónde está nuestro tesoro está nuestro corazón y también nuestra atención</li>
-              <li>La devoción es necesaria a todas las personas</li>
-        <li>La devoción todo lo perfecciona.</li>
-        <li>La perfección en cada estado y en cada persona.</li>
-        <li>Siempre de acuerdo a sus características únicas y personales</li>
-        <li>La vocación debe acomodarse a la devoción.</li>
-        <li></li>
-      <H3>NOTAS</H3>
-      <p>Usa una comparación con los perfumes y ungüentos:	<br>
-        Así como los perfumes dan un olor especial a quien los usa, la verdadera devoción impregna toda la vida del alma con la fragancia del amor divino.	<br>
-        Él distingue entre:	<br>
-        La caridad (amor a Dios por encima de todo),	<br>
-        Y la devoción, que es una forma activa y fervorosa de vivir ese amor en lo cotidiano.	<br>
-        Así, dice algo muy bello:	<br>
-        “La devoción es un grado de caridad tan perfecto, que nos hace no solo hacer el bien, sino hacerlo con rapidez, facilidad y alegría.”	<br>
-          <br>
-          <br>
-        Este capítulo es como una perla brillante en la introducción. San Francisco va al corazón de la vida cristiana:	<br>
-        La devoción no es una carga ni un deber triste.	<br>
-        Es un fuego interior, una especie de "caridad acelerada", que hace que el alma corra hacia Dios como un niño corre hacia su madre.	<br>
-            <li></li>
+             <li>Siempre nos está atrayendo de muchas maneras.
+     Nos llama inicialmente con lo que nos gusta.</li>
+       <li>Cada persona hace el bien desde lo que le gusta.
+          Pueden ser ayunos, oración, limosna. Siempre y cuando le den un gusto. Es el primer paso</li>
             <li></li>
           </ol>
-          <p><br><br>Comunicarse</p>
+          <p><br><br>Dios se comunica</p>
         </details></li>
       <!-- ****************************** -->
  <li><details class="select">
@@ -198,6 +155,12 @@
           Por eso la importancia fundamental de el examen de conciencia diario	<br>
           Nuestro examen de conciencia se a de centrar en ver al Señor, no se trata de rechazar la cruz sino de acomodarnos a ella. Como lo hacen los esposos entre ellos, los padres con sus hijos, los mendigos con la cama improvisada.
           El camino de santidad es según la voluntad de Dios y no según nuestra visión de santidad	<br>
+             <p>
+        La caridad (amor a Dios por encima de todo),	<br>
+        Y la devoción, que es una forma activa y fervorosa de vivir ese amor en lo cotidiano.	<br>
+        Así, dice algo muy bello:	<br>
+        “La devoción es un grado de caridad tan perfecto, que nos hace no solo hacer el bien, sino hacerlo con rapidez, facilidad y alegría.”	<br>
+         <li>Quien se a decidido a seguir al Señor debe prepararse para la tentación</li>
           <br><br></p>
       </details></li>
     <!-- ****************************** -->
@@ -478,6 +441,9 @@
       <!-- ****************************** -->
         <li><details class="select">
           <summary>La Oración Diaria</summary>
+          <ol>
+            <li>En la oración entregar el día al Señor</li>
+          </ol>
           <p>Oratio est gratia praesentiae<br>	<br>
             El primer paso será la oración diaria, disponer un momento para hacer oración. De ser posible en el mismo lugar y a la misma hora. <br>
             La oración será un encuentro con el Señor, como en todo dialogo es muy importante lo que decimos, y muchísimo más lo que escuchamos. <br>
