--- a/ecclesia/oracion/01Statio.html
+++ b/ecclesia/oracion/01Statio.html
@@ -53,24 +53,6 @@
       </div>
       <!-- /////////////////////////////////////// -->
       <ol>
-        <li>
-          <details class="select">
-            <summary>La Gracia de la Novedad</summary>
-            <p>
-              Dios nos invita a ser nuevos, por un camino que solo el sabe <b><br /><br /> Isaías 43,18-19 «No recuerden las cosas pasadas; no vivan en el pasado. ¡Voy a hacer algo nuevo! Ya está sucediendo, ¿no se dan cuenta? Estoy abriendo camino en el desierto y ríos en lugares desolados»
-<br><br>2 Corintios 5,17: «Por lo tanto, si alguno está en Cristo, es una nueva creación. Lo viejo ha pasado, ha llegado lo nuevo»
- <br><br></b>
-            </p>
-            <ol>
-              <li>Aceptar toda realidad como primer paso para ser mejor y mejorar la realidad </li>
-              <li>Dios se hace presente en la Gracia de la novedad</li>
-              <li> Examinar como reacciono a la novedad</li>
-              <li>El que no crece en la fe permanentemente ha empezado a retroceder. Es la importancia de la disposición al cambio</li>
-            </ol>
-            <p><br /><br /></p>
-          </details>
-        </li>
-        <!-- ****************************** -->
 <li><details class="select">
         <summary>El Llamado Universal </summary>
         <p><b>Todos estamos llamados a ser uno con Cristo Jn 17,21</b><br><br>
@@ -87,19 +69,9 @@
       
       <h3>Respuesta </h3>
       <ol>
-        <li>No todos están llamados a vivir la fe de la misma manera.
-    No es lo mismo ser obispo, artesano, soldado, campesino, soltero o casado. La meta es la misma pero el camino tiene variaciones</li>
-        <li>Cada uno debe vivir su fe de manera coherente con su vocación, sin abandonar sus responsabilidades ni aislarse del mundo.</li>
+          <li>Cada uno debe vivir su fe de manera coherente con su vocación, sin abandonar sus responsabilidades ni aislarse del mundo.</li>
         <li>Ser persona de fe no es hacer muchas oraciones, sino vivir con amor, en nuestro trabajo, familia y deberes. Incluso cosas sencillas como cocinar, trabajar, cuidar a la familia, etc.</li>
-        <li>Una vida de permanente conversión (Creciendo en la Fe, Esperanza y Amor) </li>
         <li>Implica una renuncia a todo lo que nos aleja del Señor</li>
-        <li>  La devoción no está en lo que se hace sino en lo que nos motiva a hacer.</li>
-        <li>Ser católico es una Gracia que ayuda con la disposición, el conocimiento y la actitud</li>
-        <li>No es una carga, sino un fuego interior</li>
-        <li>La devoción es necesaria a todas las personas</li>
-        <li>La devoción todo lo perfecciona.</li>
-        <li>La perfección en cada estado y en cada persona.</li>
-        <li>Siempre de acuerdo a sus características únicas y personales</li>
         <li>La vocación debe acomodarse a la devoción.</li>
       <p>
          <i> Afirma Francisco de Sales que la devoción no arruina nada, sino que mejora todas las cosas:	<br><br>
@@ -112,6 +84,22 @@
         </p>
       </details></li>
       <!-- ****************************** -->
+      <li>
+      <details class="select">
+        <summary>La Gracia de la Novedad</summary>
+        <p>
+          Dios nos invita a ser nuevos, por un camino que solo el sabe <b><br /><br /> Isaías 43,18-19 «No recuerden las cosas pasadas; no vivan en el pasado. ¡Voy a hacer algo nuevo! Ya está sucediendo, ¿no se dan cuenta? Estoy abriendo camino en el desierto y ríos en lugares desolados»
+          <br><br>2 Corintios 5,17: «Por lo tanto, si alguno está en Cristo, es una nueva creación. Lo viejo ha pasado, ha llegado lo nuevo»<br><br></b>
+        </p>
+        <ol>
+          <li>Aceptar toda realidad como primer paso para ser mejor y mejorar la realidad </li>
+          <li>Dios se hace presente en la Gracia de la novedad</li>
+          <li>El que no crece en la fe permanentemente ha empezado a retroceder. Es la importancia de la disposición al cambio</li>
+        </ol>
+        <p><br /><br /></p>
+      </details>
+    </li>
+        <!-- ****************************** -->
         <li><details class="select">
           <summary>Deus communicat</summary>
           <ol>
@@ -133,7 +121,7 @@
           <li>Amar es la acción del Espíritu, amamos verdaderamente cuando somos dóciles al Espíritu Santo, cuando lo hacemos con Amor.</li>
           <li>Querer evangelizar es bueno, pero el gran evangelizador es el Espíritu, antes que lleguemos a la persona, él ya está actuando. No debemos pues trazar otro camino al ya trazado. Somos colaboradores.	</li>
           <li>San Francisco de Asís afirma que podemos ver nuestra unión al Santo Espíritu en una actitud diaria de Paz.	</li>
-          <li>Vivir poniendo todo nuestro amor en cada acción pequeña    F de Sales</li>
+          <li>Vivir poniendo todo nuestro amor en cada acción pequeña ( F de Sales)</li>
           <li>El camino de santidad es según la voluntad de Dios y no según nuestra visión de santidad</li>
           <li></li>
         </ol>
@@ -155,12 +143,14 @@
         <!-- ****************************** -->
         <li>
           <details class="select">
-            <summary></summary>
+            <summary>Summarium</summary>
             <ol>
-            
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>DON-BIEN-AMOR</li>
+              <li>Reconocer el talento que el Señor nos ha dado, aquello que disfrutamos y nos hace mejores</li>
+              <li>Será el medio ordinario de comunicación de Dios conmigo. Aunque nos esté hablando en todo momento</li>
+              <li>En el talento está el germen del bien y el amor.</li>
+              <li>El bien implica cambio permanente, la dirección del cambio la da el amor.</li>
+              <li>En el disfrute del talento me enseña a amar, amar lo que hacemos, lo que somos y a Él.</li>
               <li></li>
             </ol>
             <p><br /><br /></p>
@@ -177,12 +167,37 @@
       </div>
       <!-- /////////////////////////////////////// -->
       <ol>
+                 <li>
+      <details class="select">
+        <summary>Las Gracias</summary>
+        <ol>
+          <li>El Don, el Bien y el Amor</li>
+          <li>El Don: Es Dios mismo</li>
+          <li>El Bien: Es la conversión permanente, guiado por el Magisterio, la Tradición y las Escrituras.</li>
+          <li> El estado del alma y la Iglesia</li>
+          <li></li>
+        </ol>
+        <p><br /><br /></p>
+      </details>
+    </li>
+        <!-- ****************************** -->
+           <li><details class="select">
+      <summary>Experiencia</summary>
+      <ol>
+        <li>También conocemos al Señor desde nuestras experiencias al contrastar y discernir lo que creemos con lo vivido</li>
+        <li>En el día a día vemos la Providencia y en la memoria compruebo su Misericordia</li>
+        <li></li>
+
+      </ol>
+    </details></li>
+    <!-- ****************************** -->
  <li><details class="select">
-      <summary>El Magisterio</summary>
+      <summary>El Magisterio y Tradición</summary>
       <ol>
         <li>La referencia fundamental del conocimiento del Señor es la iglesia y su Magisterio</li>
         <li>Cada acto bueno, nos revela al Señor nos muestra algo que necesitamos saber y aprender para vivir.</li>
         <li>El mal y el pecado nos oculta la visión de Cristo, pero no nos priva de su presencia</li>
+        <li>La verdad acerca de Dios, el Bien y el Amor nos es dado por la Iglesia</li>
         <li></li>
       </ol>
       <p><br><br></p>
@@ -193,36 +208,16 @@
       <p>El encuentro con el Señor tiene una finalidad central, que en mi caso es mi conversión<br><br>
       <b><ol>
         <li>Jesús mensaje y mensajero de todo y en todo</li>
-        <li>La Biblia leída en clave de amor </li>
         <li></li>
       </ol></b>
       </p>
     </details></li>
     <!-- ****************************** -->
-           <li>
-      <details class="select">
-        <summary>Las Gracias</summary>
-        <ol>
-          <li>La oración con las Escrituras, a la luz del Magisterio y la Tradición.</li>
-          <li>El disfrute de la Eucaristía y la Adoración,</li>
-          <li> El estado del alma, alegría y deseo de conversión permanente</li>
-          <li></li>
-        </ol>
-        <p><br /><br /></p>
-      </details>
-    </li>
-        <!-- ****************************** -->
-    <li><details class="select">
-      <summary>Experiencia</summary>
-      <p>También conocemos al Señor desde nuestras experiencias al contrastar y discernir lo que creemos con lo vivido<br><br></p>
-    </details></li>
-    <!-- ****************************** -->
- 
     <li><details class="select">
       <summary>Examinare Profectum</summary>
       <ol>
         <li>“Porque allí donde está tu tesoro, allí estará también tu corazón.” <b>Mt 6,21</b></li>
-        <li></li>
+        <li>Hacer de Dios el centro de la vida</li>
         <li></li>
         <li></li>
       </ol>
@@ -255,19 +250,16 @@
       <ol>
          <li><details class="select">
    <summary>El Reino: El Bien</summary>
-   <p>Venga a nosotros tu Reino<br><br> La construcción del reino es una acción del Espíritu Santo, que se manifiesta en la oración y la obediencia a su iglesia<br><br>
+   <p>Venga a nosotros tu Reino<br><br> La construcción del reino es una acción del Espíritu Santo, que se manifiesta en la oración, la obediencia a su iglesia y el amor a los hermanos<br><br>
    <ol>
+    <li>El Bien se inicia con la Verdad</li>
      <li>La misión comienza con una comunidad de discípulos.</li>
      <li>Jesús es quien nos conduce al Reino </li>
      <li>Se construye con el Bien, en todo y cada cosa. Venciendo al mal donde quiera se instale</li>
-     <li>El servicio es el bien que hacemos, en nombre de Dios a nuestros semejantes</li>
-     <li>Este servicio debe ser integral, físico, social, y principalmente espiritual </li>
      <li>El bien se inicia con la verdad y lleva a la libertad</li>
-     <li>El bien es un hábito, inicia con: Definir o decidir, el orden, y la vivencia de la libertad</li>
      <li>El tipo de vida puede obstruir o ayudar al encuentro con el Señor.</li>
      <li>El mal es el deseo del bien sin tener a Dios presente.</li>
      <li>La iniciativa siempre la tiene el bien, el mal responderá con violencia.</li>
-     <li>La humildad nos lleva a la verdad, Y está al bien. La falta de ella al mal.</li>
      <li>Que las acciones sean el camino a la transformación del corazón. Es la invitación necesaria de hacer lo correcto por los motivos correctos.</li>
    </ol>
  
@@ -291,14 +283,8 @@
        <summary>Examen de Conciencia</summary>
        <p>El objetivo es ser consciente de que debo ser cada vez mejor<br><br>
        <b><ol>
-         <li>Cada vez que haga algo y me de cuenta: anotar y enmendar</li>
-         <li>Tener un momento de Reflexión diaria</li>
-         <li>Vivir de tal manera que se elimine, quizás poco a poco, de mi vida el mal</li>
-         <li>Arrepentimiento, confesión, perdón de pecados y propósito de enmienda</li>
-         <li>La conversión implica la fe, esperanza y amor</li>
-         <li>Anotar la decisiones y las razones, para evaluar y mejorar</li>
-         <li>Si nos irritamos, nos turbamos, angustiamos, nos está indicando donde deberemos trabajar.</li>
          <li>Nuestro examen de conciencia se ha de centrar en ver al Señor, no se trata de rechazar la cruz sino de acomodarnos a ella. Como lo hacen los esposos entre ellos, los padres con sus hijos, los mendigos con la cama improvisada.	</li>
+         <li>Si nos irritamos, nos turbamos, angustiamos, nos está indicando donde deberemos trabajar, que buscar en Él.</li>
          <li></li>
          <li></li>
          <li></li>
@@ -311,9 +297,9 @@
             <summary>La Tentación</summary>
             <ol>
               <li>Quien se a decidido a seguir al Señor debe prepararse para la tentación</li>
-              <li>Jn 16,33 Os he dicho estas cosas para que tengáis paz en mí. En el mundo tendréis tribulación. Pero ¡ánimo!: yo he vencido al mundo."</li>
               <li> En Efesios 6:12, se nos dice que nuestra lucha no es contra seres humanos, sino contra las fuerzas espirituales del mal. </li>
-              <li></li>
+              <li>Jn 16,33 Os he dicho estas cosas para que tengáis paz en mí. En el mundo tendréis tribulación. Pero ¡ánimo!: yo he vencido al mundo."</li>
+              <li>Para vencer la tentación necesito La Verdad y la Paz</li>
               <li></li>
             </ol>
             <p><br /><br /></p>
@@ -350,7 +336,7 @@
             <ol>
               <li>	La oración es fundamentalmente una Gracia, donde Dios mismo viene a nuestro encuentro y espera una respuesta.	</li>
               <li>La oración es ponerme en contacto con el sumo bien, el fin del paso inicial</li>
-              <li></li>
+              <li>Dios mismo es quien nos mueve a ora, al bien, y espera nuestra respuesta: Fiat, apertura y disposición </li>
               <li></li>
               <li></li>
             </ol>
@@ -373,8 +359,7 @@
         <li><details class="select">
           <summary>La Oración Diaria</summary>
           <ol>
-            <li>En la oración entregar el día al Señor</li>
-            <li>Oratio est gratia praesentiae</li>
+            <li>En la oración entregar el día al Señor. Oratio est gratia praesentiae</li>
             <li>El paso necesario será la oración diaria, disponer un momento para hacer oración. De ser posible en el mismo lugar y a la misma hora. </li>
             <li> La oración será un encuentro con el Señor, como en todo dialogo es muy importante lo que decimos, y muchísimo más lo que escuchamos.</li>
             <li>El dialogo implica buscar el bien en la verdad.</li>
@@ -408,28 +393,10 @@ Mientras estaba allí, el Señor pasó y vino un viento recio, tan violento que 
             Antes de cada oración, acción, pensamiento, hagamos un instante de silencio, ni corto ni prolongado. <br>El necesario para entrar en sintonía con el Señor</li>
             <li>Mateo 6:6: "Pero tú, cuando ores, entra en tu cuarto, cierra la puerta y ora a tu Padre, que está en lo secreto”</li>
             <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
           </ol>
             <br><br></p>
         </details></li>
       <!-- ****************************** -->
-         <li>
-          <details class="select">
-            <summary>Propositum</summary>
-            <ol>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ol>
-            <p><br /><br />Finalidad, Objetivo, meta, propósito</p>
-          </details>
-        </li>
-        <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
@@ -450,10 +417,12 @@ Mientras estaba allí, el Señor pasó y vino un viento recio, tan violento que 
         <li>
           <details class="select">
             <summary>Ducente Deo</summary>
+            <p><b>Gracia-Bien-Amor</b></p>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>Como descubrir el Don?</li>
+              <li>Que disfruto hacer?</li>
+              <li>Descubrir mi don, al bien que me invita y como en su ejecución crece mi amor (virtudes) </li>
+              <li>Lo mismo para quienes trato</li>
               <li></li>
             </ol>
             <p><br /><br />Con Dios como guía"</p>
@@ -463,10 +432,11 @@ Mientras estaba allí, el Señor pasó y vino un viento recio, tan violento que 
         <li>
           <details class="select">
             <summary>Conversio mentis et cordis</summary>
+            <p><b>Iniciar el camino del bien con la paz y la verdad</b></p>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>La paz me prepara para descubrir la verdad</li>
+              <li>Cómo encontrar paz y mantenerla a lo largo del día y las circunstancia?</li>
+              <li>Y la verdad como puedo reconocerla?</li>
               <li></li>
             </ol>
             <p><br /><br />cambio en la manera de pensar, sentir, creer</p>
@@ -477,9 +447,9 @@ Mientras estaba allí, el Señor pasó y vino un viento recio, tan violento que 
           <details class="select">
             <summary>Mutatio cordis in operibus quotidianis</summary>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>La oración, cual es el sentido y la forma?</li>
+              <li>Que entendió la iglesia por oración?</li>
+              <li>Como ha ido ampliándose el concepto con el tiempo?</li>
               <li></li>
             </ol>
             <p><br /><br />Cambio del corazón en las obras de cada dia</p>
@@ -490,12 +460,25 @@ Mientras estaba allí, el Señor pasó y vino un viento recio, tan violento que 
           <details class="select">
             <summary>Renovatio morum cotidianorum</summary>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>Crecer en el amor es un Don, el cual acepto vivir</li>
+              <li>Hacer los trabajos con paz y alegría, porque busco en ellos al Señor</li>
+              <li>Descubrir que me quita la paz?</li>
               <li></li>
             </ol>
             <p><br /><br />Renovación de las costumbres diarias</p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+                  <li>
+          <details class="select">
+            <summary>Propositum</summary>
+            <ol>
+              <li>Mt 6,21 Como hacer del Señor, mi vida</li>
+              <li>que me aleja de esto, que me acerca</li>
+              <li>Como lo vivieron los cristianos hasta hoy</li>
+              <li></li>
+            </ol>
+            <p><br /><br />Finalidad, Objetivo, meta, propósito</p>
           </details>
         </li>
         <!-- ****************************** -->
