--- a/ecclesia/oracion/01Statio.html
+++ b/ecclesia/oracion/01Statio.html
@@ -440,7 +440,8 @@ Mientras estaba allí, el Señor pasó y vino un viento recio, tan violento que 
         <li>
           <details class="select">
             <summary>Conversio mentis et cordis</summary>
-            <p><b>Iniciar el camino del BIEN con la PAZ y la VERDAD</b></p>
+            <p><b>Iniciar el camino del BIEN con la PAZ, la VERDAD y la LIBERTAD </b></p>
+            <i><p>Se trata de orientarse siempre hacia el bien  <br> De Encontrar una paz que crezca cada día  <br>Para poder Buscar la Verdad, permanentemente <br> Y optar por el camino de la libertad, que es elegir gustosamente al Señor </p></i>
             <ol>
               <li>EL BIEN
                 <ol>
@@ -450,16 +451,15 @@ Mientras estaba allí, el Señor pasó y vino un viento recio, tan violento que 
 Y el ser humano participa del bien cuando ama, actúa con justicia, y sigue la verdad revelada. <br> Jesucristo es el modelo perfecto del Bien: “pasó haciendo el bien” (Hechos 10,38).</li> <br>
 <li>	  Hay bienes que cuestan: perdonar, sacrificarse, obedecer, corregir, callar a tiempo…	</li>
 <li>	 Pero son bienes verdaderos porque nos humanizan, nos hacen más libres y más capaces de amar.	</li>
-
+</ol>
+<ol>
+  
     <h4 class="latin">Eligiendo del Bien</h4> 
-    <li><b>Con la razón y la conciencia</b>	</li>
+<h3><b>Discernimiento cristiano: <br>Conformidad con el Evangelio, <br> Con la razón, la conciencia y Por sus frutos (cf. Mateo 7,16-20)</b></h3>
 <li>	El ser humano está dotado de conciencia moral, que nos ayuda a distinguir el bien del mal si está bien formada.	</li>
 <li>	Esta conciencia se apoya en la ley natural, inscrita por Dios en el corazón humano.	</li>
-<li>	<b>Por sus frutos (cf. Mateo 7,16-20)</b>	</li>
-<li>	El bien verdadero produce paz interior, crecimiento en virtud y frutos de amor, justicia, humildad, servicio y verdad.	</li>
-<li>	<b>Discernimiento cristiano</b>	</li>
 <li>	El bien no se reconoce solo por el gusto o lo útil, sino por su conformidad con el Evangelio y la voluntad de Dios.	</li>
-<li>	San Ignacio de Loyola propone usar el discernimiento de espíritus: <br><b>El bien auténtico produce paz duradera, gozo interior y humildad, no confusión ni egoísmo</b>	</li>
+<li>	San Ignacio de Loyola propone usar el discernimiento de espíritus: <br><b>El bien auténtico produce paz duradera, gozo interior y humildad, crecimiento en virtud y frutos de amor, justicia, humildad, servicio y verdad jamás confusión y egoísmo</b>	</li>
 
                 </ol>
               </li>
@@ -469,12 +469,18 @@ Y el ser humano participa del bien cuando ama, actúa con justicia, y sigue la v
                   <li>Cómo encontrar paz y mantenerla a lo largo del día y las circunstancia?</li>
                 </ol>
               </LI>
-
+            
               <LI>LA VERDAD
                 <ol>
                   <li>Y la verdad como puedo reconocerla?</li>
                 </ol>
              </li>
+              <LI>LA LIBERTAD
+                <ol>
+                  <li>La libertad es fruto de la Verdad</li>
+                  <li>Cómo vivir libremente cada día y en cada momento?</li>
+                </ol>
+              </LI>
             </ol>
             <p><br /><br /><span class="latin">"Cambio en la manera de pensar, sentir, creer"</span></p>
           </details>
