--- a/ecclesia/oracion/01Statio.html
+++ b/ecclesia/oracion/01Statio.html
@@ -464,9 +464,16 @@ Y el ser humano participa del bien cuando ama, actúa con justicia, y sigue la v
                 </ol>
               </li>
               <LI>LA PAZ
+                <P>La paz me prepara para descubrir la verdad</P>
                 <ol>
-                  <li>La paz me prepara para descubrir la verdad</li>
-                  <li>Cómo encontrar paz y mantenerla a lo largo del día y las circunstancia?</li>
+                 <li>Es dependiente de las prioridades existenciales</li>
+                 <li>la fundamental es la vida, solo que para quien significa algo diferente</li>
+                 <li>Se trata de conocer mis prioridades actuales e ir purificando cada una</li>
+                 <li>Buscar un criterio para conocerlas y para purificarlas</li>
+                 <li>Un criterio puede ser el punto de referencia. Creo debería ser Cristo y su evangelio</li>
+                 <li>posiblemente se a formado desde las experiencias personales y las posibles soluciones dadas en su momento</li>
+                 <li>La paz eleva el nivel del bien, la verdad mejora la paz, la libertad mejora a todas y cada una, todas entre si se apoyan</li>
+                 <li></li>
                 </ol>
               </LI>
             
@@ -516,10 +523,28 @@ Y el ser humano participa del bien cuando ama, actúa con justicia, y sigue la v
           <details class="select">
             <summary>Propositum</summary>
             <ol>
-              <li>Mt 6,21 Como hacer del Señor, mi vida</li>
+              <h3>INCEPTUM DOMINE</h3>
+              <li>Encontrar y desarrollar la Gracia Inicial</li>
+              <li>El Don, motiva a buscar el Bien</li>
+              <H3>SCIENTIA DOMINI</H3>
+              <li>Dios siempre se da todo, mi pecado lo oculta</li>
+              <li>Lectura desde la experiencia, la Tradición y el Magisterio</li>
+              <h3>DISCERNIMENTUM</h3>
+              <li>Donde esta mi tesoro esta mi corazón. Mt 6,21</li>
               <li>que me aleja de esto, que me acerca</li>
-              <li>Como lo vivieron los cristianos hasta hoy</li>
-              <li></li>
+              <h3>ORATIO</h3>
+              <li>Oración diaria</li>
+              <li>Silencio diario</li>
+              <li><B>El Bien</B> <br>
+              “El bien es lo que perfecciona una realidad según su naturaleza.” Aristóteles <br>
+              <b>Discernimiento cristiano: <br>
+Conformidad con el Evangelio, <br>
+Con la razón, la conciencia y Por sus frutos (cf. Mateo 7,16-20) </b>
+              </li>
+              <li><B>La Paz</B></li>
+              <li><b>La Verdad </b></li>
+              <li><b>La Libertad</b></li>
+         
             </ol>
             <p><br /><br />Finalidad, Objetivo, meta, propósito</p>
           </details>
